--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​and everything is perfect, Latest news, ​Travel with​ us, Do something fun, ​Travel with​ us, ​Working with a reputable travel agent takes the stress out of travel, ​Join Our Newsletter">
     <meta name="description" content="">
-    <title>Casa</title>
+    <title>School supplies</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Casa.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
