--- a/Métodos.html
+++ b/Métodos.html
@@ -32,18 +32,18 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-palette-4-base" id="sec-a7b1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <nav class="u-menu u-menu-hamburger u-offcanvas u-menu-1" data-responsive-from="XL">
-          <div class="menu-collapse">
-            <a class="u-button-style u-custom-text-shadow u-nav-link" href="#" style="padding: 10px; font-size: calc(1em + 20px);">
+  <body class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-palette-4-base u-header" id="sec-a7b1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XS">
+          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
+            <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-text-shadow u-custom-top-bottom-menu-spacing u-nav-link" href="#" style="font-size: calc(1em + 4px); padding: 2px 0px;">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-98de"></use></svg>
               <svg class="u-svg-content" version="1.1" id="svg-98de" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="School-supplies.html">Inicio</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Métodos.html">Métodos</a>
+            <ul class="u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-1-base" href="School-supplies.html" style="padding: 10px 0px;">Inicio</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-1-base" href="Métodos.html" style="padding: 10px 0px;">Métodos</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -81,7 +81,7 @@ cartesiano. Al observar el gráfico, se busca el punto donde las restricciones
 se intersecan y determinan el mejor resultado posible según el objetivo
 establecido. Es una forma visual y sencilla de encontrar soluciones aproximadas
 a problemas matemáticos.</p>
-                  <a href="https://www.youtube.com/watch?v=xla02Y99Ngw" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-1" target="_blank">Leer más</a>
+                  <a href="https://www.youtube.com/watch?v=xla02Y99Ngw" class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-1" target="_blank">Leer más</a>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-size-30 u-size-xs-60 u-image-1" src="" data-image-width="1280" data-image-height="853">
@@ -111,7 +111,7 @@ a problemas matemáticos.</p>
 unidades de cuadernos y 1000 unidades de plumas para formar dos tipos de
 paquetes: Paquete A y Paquete B. Cada paquete se compone de una combinación
 específica de lápices, cuadernos y plumas.&nbsp;</p>
-                  <a href="Métodos.html#carousel_168a" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-1" target="_blank">Leer más</a>
+                  <a href="Métodos.html#carousel_168a" class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-1" target="_blank">Leer más</a>
                 </div>
               </div>
             </div>
@@ -125,6 +125,8 @@ específica de lápices, cuadernos y plumas.&nbsp;</p>
     </section>
     <section class="u-clearfix u-palette-1-light-2 u-section-4" id="carousel_168a">
       <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-palette-4-base u-shape u-shape-circle u-shape-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-direction="Left"></div>
+        <div alt="" class="u-image u-image-circle u-image-1" data-image-width="1280" data-image-height="853" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"></div>
         <div class="u-container-style u-group u-radius-50 u-shape-round u-white u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
             <h2 class="u-align-left u-text u-text-default u-text-1">Nuestros paquetes</h2>
@@ -137,8 +139,6 @@ las siguientes:</u>
             <a href="Métodos.html#sec-2bef" class="u-active-palette-4-light-1 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Ver plan de beneficios</a>
           </div>
         </div>
-        <div alt="" class="u-image u-image-circle u-image-1" data-image-width="1280" data-image-height="853" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"></div>
-        <div class="u-palette-4-base u-shape u-shape-circle u-shape-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-direction="Left"></div>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-5" id="sec-2bef">
@@ -188,8 +188,8 @@ beneficio total?</h3>
         <a href="Métodos.html#carousel_33e7" class="u-active-palette-4-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Leer más</a>
       </div>
     </section>
-    <section class="u-clearfix u-palette-1-base u-section-6" id="carousel_33e7">
-      <div class="u-clearfix u-sheet u-sheet-1">
+    <section class="u-clearfix u-palette-1-base u-section-6" id="carousel_f613">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="u-container-style u-expanded-width u-grey-5 u-group u-radius-50 u-shape-round u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="X">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-align-center u-text u-text-body-color u-text-default u-text-1">Proceso</h2>
@@ -197,7 +197,8 @@ beneficio total?</h3>
               <br>Sujeto a:<br>Disponibilidad
 de lápices: <b>2x + y ≤ 2000</b>&nbsp;<br>Disponibilidad
 de cuadernos: <b style="">x + 2y ≤ 1500</b>&nbsp;<br>Disponibilidad
-de plumas: <b>x + 2y ≤ 1000</b><b>x, y ≥
+de plumas: <b>x + 2y ≤ 1000</b>
+              <br><b>x, y ≥
 0 </b><b>&nbsp;</b>&nbsp;<br>
               <br>Para hacer la resolución de
 las restricciones debemos convertir las desigualdades a igualdades:<br><b>2x + y
@@ -225,81 +226,27 @@ resolvemos para y:&nbsp;<br>0 + 2y = 1000&nbsp;<br>y = 500&nbsp;<br>Obtenemos lo
 y (0, 500)&nbsp;<br><b>A continuación, graficamos los
 puntos obtenidos en un plano cartesiano:</b>
               <br>A: (1000, 0) y (0, 2000)&nbsp;<br>B: (1500, 0) y (0, 750)&nbsp;<br>C: (1000, 0) y (0, 500)&nbsp;<br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br><b>Región
-factible:&nbsp;</b>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>Para determinar la región factible debemos seleccionar
+            </p>
+            <img class="u-expanded-width-xs u-image u-image-round u-radius-50 u-image-1" src="images/Imagen1.png" alt="" data-image-width="2195" data-image-height="1331">
+            <p class="u-align-justify u-text u-text-3"><b>Región factible:</b>
+            </p>
+            <img class="u-expanded-width-xs u-image u-image-round u-radius-50 u-image-2" src="images/Imagen2.png" alt="" data-image-width="2186" data-image-height="1425">
+            <p class="u-align-justify u-text u-text-4"> Para determinar la región factible debemos seleccionar
 aleatoriamente dos puntos, punto alto (por encima de la recta) y punto bajo
 (por debajo de la recta), para después crear las condiciones en base a las
-restricciones:<br>
+restricciones:
+&nbsp;&nbsp;<!--[if !supportLists]-->
               <br>A)&nbsp;&nbsp;&nbsp; <!--[endif]-->Disponibilidad de lápices: <b>2x + y ≤ 2000</b>&nbsp;<br><b>Punto alto (2100,2100) se van a sustituir los
 valores de (x, y) por los de el punto.&nbsp;</b>
-              <br><b style=""></b><b>2(2100) + 2100 = 4200 + 2100 = 6300</b>
-              <br><u>Al no respetar la condición (≤ 2000) todos los valores por
-encima de la recta A serán desestimados&nbsp;</u>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              <br><b>Punto bajo (500, 500)</b>
-              <br><b></b><b>2(500) + 500 = 1000 + 500 = 1500</b>
-              <br><u>Respeta la condición ya
-que es menor a 2000 y también cercano a la cifra.</u><u>&nbsp;</u>
-              <br>
+              <br><b>2(2100) + 2100 = 4200 + 2100 = 6300</b>&nbsp;<br><u>Al no respetar la condición (≤ 2000) todos los valores por
+encima de la recta A serán desestimados </u>
             </p>
-            <img class="u-image u-image-round u-radius-50 u-image-1" src="images/image.png" alt="" data-image-width="638" data-image-height="387">
-            <img class="u-image u-image-round u-radius-50 u-image-2" src="images/image1.png" alt="" data-image-width="636" data-image-height="415">
-            <img class="u-image u-image-round u-radius-50 u-image-3" src="images/image3.png" alt="" data-image-width="452" data-image-height="311">
-            <a href="Métodos.html#carousel_8e17" class="u-active-palette-4-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Leer más</a>
+            <img class="u-image u-image-round u-radius-50 u-image-3" src="images/Imagen3.png" alt="" data-image-width="2068" data-image-height="1424">
+            <p class="u-align-justify u-text u-text-5"><b>Punto bajo (500, 500)&nbsp;</b>
+              <br><b>2(500) + 500 = 1000 + 500 = 1500&nbsp;</b>
+              <br><u>Respeta la condición ya
+que es menor a 2000 y también cercano a la cifra.</u><u></u>
+            </p>
           </div>
         </div>
       </div>
