--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="School-supplies.html" data-home-page-title="School supplies" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-palette-4-base" id="sec-a7b1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <nav class="u-menu u-menu-hamburger u-offcanvas u-menu-1" data-responsive-from="XL">
-          <div class="menu-collapse">
-            <a class="u-button-style u-custom-text-shadow u-nav-link" href="#" style="padding: 10px; font-size: calc(1em + 20px);">
+  <body data-home-page="School-supplies.html" data-home-page-title="School supplies" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-palette-4-base u-header" id="sec-a7b1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XS">
+          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
+            <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-text-shadow u-custom-top-bottom-menu-spacing u-nav-link" href="#" style="font-size: calc(1em + 4px); padding: 2px 0px;">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-98de"></use></svg>
               <svg class="u-svg-content" version="1.1" id="svg-98de" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="School-supplies.html">Inicio</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Métodos.html">Métodos</a>
+            <ul class="u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-1-base" href="School-supplies.html" style="padding: 10px 0px;">Inicio</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-grey-90 u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-1-base" href="Métodos.html" style="padding: 10px 0px;">Métodos</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -114,7 +114,7 @@ brindar un servicio personalizado y adaptado a sus necesidades.</p>
                     </div>
                   </div>
                   <div class="u-container-style u-hover-feature u-layout-cell u-right-cell u-shape-rectangle u-size-30 u-layout-cell-4" src="">
-                    <div class="u-container-layout u-valign-top u-container-layout-4">
+                    <div class="u-container-layout u-valign-bottom u-container-layout-4">
                       <img class="u-expanded-width u-image u-image-round u-radius-10 u-image-2" src="images/74b2a6438f1aff31bf028251cd20df48fbd84484aa6522b0d3858f465d5bf3775ef51101ab262cfb72a0589e9ae665497832bd2e5a5d681f232028_1280.jpg" alt="" data-image-width="1280" data-image-height="853">
                     </div>
                   </div>
@@ -154,7 +154,7 @@ brindar un servicio personalizado y adaptado a sus necesidades.</p>
             </div>
             <div class="infinite u-align-center u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-2">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-icon-circle u-palette-1-light-2 u-icon-2"><img src="images/7795080.png" alt=""></span>
-                <h4 class="u-text u-text-2"> Bolígrafos</h4>
+                <h4 class="u-text u-text-2">plumas</h4>
               </div>
             </div>
             <div class="infinite u-align-center u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-3">
