--- a/Métodos.html
+++ b/Métodos.html
@@ -185,7 +185,7 @@ beneficio total?</h3>
             </tbody>
           </table>
         </div>
-        <a href="Métodos.html#carousel_33e7" class="u-active-palette-4-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Leer más</a>
+        <a href="Métodos.html#carousel_f613" class="u-active-palette-4-light-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-15 u-btn-1">Leer más</a>
       </div>
     </section>
     <section class="u-clearfix u-palette-1-base u-section-6" id="carousel_f613">
