--- a/Métodos.html
+++ b/Métodos.html
@@ -189,7 +189,7 @@ beneficio total?</h3>
       </div>
     </section>
     <section class="u-clearfix u-palette-1-base u-section-6" id="carousel_f613">
-      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-container-style u-expanded-width u-grey-5 u-group u-radius-50 u-shape-round u-group-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="X">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-align-center u-text u-text-body-color u-text-default u-text-1">Proceso</h2>
@@ -246,6 +246,45 @@ encima de la recta A serán desestimados </u>
               <br><b>2(500) + 500 = 1000 + 500 = 1500&nbsp;</b>
               <br><u>Respeta la condición ya
 que es menor a 2000 y también cercano a la cifra.</u><u></u>
+            </p>
+            <p class="u-align-justify u-text u-text-6"> B)&nbsp;&nbsp;&nbsp; <!--[endif]-->Disponibilidad de cuadernos:&nbsp;<b>x + 2y ≤ 1500</b>&nbsp;<br><b>Punto
+alto (1000,1000)</b>&nbsp;<br><b>1000+2(1000)
+=</b><b>1000+
+2000= 3000</b>&nbsp;<br><u>No
+respeta la condición, por lo que se desestiman los puntos por encima de la recta B.&nbsp;</u>
+            </p>
+            <img class="u-image u-image-round u-radius-50 u-image-4" src="images/Imagen4.png" alt="" data-image-width="1210" data-image-height="789">
+            <p class="u-align-justify u-text u-text-7"><b>Punto bajo
+(400,400)</b>&nbsp;<br><b>400+2(400)
+=</b><b>400+800
+= 1200</b>
+              <br><u>Respeta la condición ya
+que es menor a 1500 y también cercano a la cifra.</u><u></u>
+            </p>
+            <p class="u-align-justify u-text u-text-8"> C)&nbsp;&nbsp;&nbsp; <!--[endif]-->Disponibilidad de plumas: <b>x + 2y ≤ 1000</b>&nbsp;<br><b>Punto alto (600,200)</b>&nbsp;<br><b>600+2 (200) =</b><b style="">600+400= 1000&nbsp;</b>
+              <br><u>Respeta la condición y da la cantidad exacta, por lo que, no se
+desestimaran los puntos por encima de la recta C.</u><u></u>
+            </p>
+            <img class="u-image u-image-round u-radius-50 u-image-5" src="images/Imagen4.png" alt="" data-image-width="1210" data-image-height="789">
+            <p class="u-align-justify u-text u-text-9"><b>Punto bajo (400,300)</b>&nbsp;<br><b>400+ 2(300) =</b><b>400+600= 1000</b>&nbsp;<br><u>También respeta la
+condición por lo que se considera que los puntos alto y bajo de la recta C son
+parte de la región factible.</u>
+              <br>
+              <br><b>Región factible:</b><b>&nbsp;</b>Para
+determinar la región factible primero debemos seleccionar los puntos de
+intersección que existen entre las restricciones.&nbsp;
+            </p>
+            <img class="u-image u-image-round u-radius-50 u-image-6" src="images/Imagen6.png" alt="" data-image-width="1192" data-image-height="777">
+            <p class="u-align-justify u-text u-text-10"><b>(0, 750)&nbsp;</b>
+              <br><b>(0,500)</b>&nbsp;<br><b>(300,850)&nbsp;</b>
+              <br><b>(1000, 0)</b>&nbsp;<br>Después, debemos multiplicar los puntos por la <b>Utilidad
+máxima Z = 10x + 15y</b>&nbsp;<br><b>(0, 750) = 10(0) + 15(750) = 11,250&nbsp;</b>
+              <br><b>(0,500) = 10(0) + 15(500) = 7, 500</b>&nbsp;<br><b>(300,850) = 10(300) + 15(850) = <a name="_Hlk134396010" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">15,
+750</a></b>&nbsp;<br><b>(1000, 0) = 10(1000) + 15(0) = 10, 000</b>&nbsp;<br>En base a los cálculos anteriores se escribe la siguiente
+interpretación:
+Para que la empresa School Supplies maximice su beneficio total
+debe elaborar 300 paquetes del tipo A y 850 paquetes del tipo B, lo que
+generaría una ganancia de $15, 750.&nbsp;
             </p>
           </div>
         </div>
