--- a/Métodos.html
+++ b/Métodos.html
@@ -48,7 +48,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-overlap u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-palette-4-light-3" id="sec-a7b1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-overlap u-overlap-transparent u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-palette-4-light-3" id="sec-a7b1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XS">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
             <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-border-radius u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-text-shadow u-custom-top-bottom-menu-spacing u-nav-link" href="#" style="font-size: calc(1em + 4px); padding: 2px 0px;">
@@ -152,7 +152,7 @@ las siguientes:</u>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-4" id="sec-2bef">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction=""> ¿Qué
 cantidad de paquetes de cada tipo (A y B) que deben formarse para maximizar el
 beneficio total?</h3>
