--- a/Más-métodos.html
+++ b/Más-métodos.html
@@ -293,7 +293,7 @@ Polanco, Ciudad de México, México</p>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-6c1d"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-palette-4-base u-footer" id="sec-6c1d"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
