--- a/Métodos.html
+++ b/Métodos.html
@@ -50,7 +50,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-overlap u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-palette-4-light-3" id="sec-a7b1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-overlap u-overlap-transparent u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-palette-4-light-3" id="sec-a7b1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XS">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
             <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-border-radius u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-text-shadow u-custom-top-bottom-menu-spacing u-nav-link" href="#" style="font-size: calc(1em + 4px); padding: 2px 0px;">
@@ -1582,7 +1582,7 @@ zij</p>
       </div>
     </section>
     <section class="u-clearfix u-section-14" id="carousel_e1a7">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-row" style="">
@@ -1606,21 +1606,12 @@ de tiempo en el proyecto. </p>
             </div>
           </div>
         </div>
-        <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-2">
-          <div class="u-layout" style="">
-            <div class="u-layout-row" style="">
-              <div class="u-align-center u-container-style u-image u-layout-cell u-left-cell u-size-26 u-size-xs-60 u-image-2" src="" data-image-width="1280" data-image-height="853" data-animation-name="customAnimationIn" data-animation-duration="1000">
-                <div class="u-container-layout u-container-layout-3" src=""></div>
-              </div>
-              <div class="u-container-style u-layout-cell u-right-cell u-size-34 u-size-xs-60 u-white u-layout-cell-4" src="" data-animation-name="customAnimationIn" data-animation-duration="1000">
-                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-2"><img src="images/4133589.png" alt=""></span>
-                  <h2 class="u-align-center u-text u-text-default u-text-3">Planteamiento</h2>
-                  <p class="u-align-justify u-text u-text-4">.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <img class="u-image u-image-contain u-image-default u-image-2" src="images/image22.png" alt="" data-image-width="602" data-image-height="180">
+        <p class="u-text u-text-default u-text-3"> COSTO TOTAL: 70(5)+60(3)+80(1)+60(6)+70(3)+(60)(1)+(0)(4)=
+CT=1240</p>
+        <img class="u-image u-image-contain u-image-default u-image-3" src="images/image23.png" alt="" data-image-width="428" data-image-height="579">
+        <img class="u-image u-image-contain u-image-default u-image-4" src="images/image24.png" alt="" data-image-width="386" data-image-height="581">
+        <img class="u-image u-image-contain u-image-default u-image-5" src="images/image25.png" alt="" data-image-width="386" data-image-height="229">
       </div>
     </section>
     <section class="u-clearfix u-section-15" id="carousel_0858">
@@ -1649,7 +1640,7 @@ de tiempo en el proyecto. </p>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-6c1d"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-palette-4-base u-footer" id="sec-6c1d"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
